tests/ui/main_macro/pass/return_result.rs
use chronographer::main;

#[main]
async fn main(sched: MyScheduler) -> Result<(), String> {
    Ok(())
}