tests/ui/main_macro/fail/unsupported_return.rs
use chronographer::main;

#[main]
async fn main(sched: MyScheduler) -> u32 { 42 }